--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,8 @@ SET(CMAKE_CXX_STANDARD 17)
 SET(CMAKE_CXX_STANDARD_REQUIRED True)
 PROJECT(TheGame)
 set_property( DIRECTORY PROPERTY VS_STARTUP_PROJECT "TheGame" )
+include_directories(${PROJECT_SOURCE_DIR}/)
+include_directories(${PROJECT_SOURCE_DIR}/3d_party/include)
+LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/3d_party/libs)
 ADD_SUBDIRECTORY(executable)
 ADD_SUBDIRECTORY(engine)
