--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,4 @@ include_directories(${PROJECT_SOURCE_DIR}/3d_party/include)
 LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/3d_party/libs)
 ADD_SUBDIRECTORY(executable)
 ADD_SUBDIRECTORY(engine)
+ADD_SUBDIRECTORY(game)
