--- a/engine/core/CMakeLists.txt
+++ b/engine/core/CMakeLists.txt
@@ -5,6 +5,10 @@ SET(SOURCES
 	"system.h"
 	"systems_holder.cpp"
 	"systems_holder.h"
+	"window_ctrl.cpp"
+	"window_ctrl.h"
+	"game_object.cpp"
+	"game_object.h"
 )
 add_library(${PROJECT_NAME} ${SOURCES})                      
 set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER "engine")
