--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -2,6 +2,7 @@ project(game)
 cmake_minimum_required(VERSION 3.10)
 SET(SOURCES
 	"GameCtrl.h"
+	"GameCtrl.cpp"
 )
 add_library(${PROJECT_NAME} ${SOURCES})                      
 set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER "game")
