--- a/engine/render/open_gl/CMakeLists.txt
+++ b/engine/render/open_gl/CMakeLists.txt
@@ -16,7 +16,7 @@ SET(MODEL_SOURCES
 	"model/model.cpp")
 SOURCE_GROUP("shaders" FILES ${SHADER_SOURCES})
 SOURCE_GROUP("model" FILES ${MODEL_SOURCES})
-ADD_LIBRARY(open_gl ${SHADER_SOURCE} ${MODEL_SOURCES})
+ADD_LIBRARY(open_gl ${SHADER_SOURCES} ${MODEL_SOURCES})
 
 set_target_properties(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)                 
 SET_PROPERTY(TARGET ${PROJECT_NAME} PROPERTY FOLDER "engine/render")
