--- a/engine/utils/CMakeLists.txt
+++ b/engine/utils/CMakeLists.txt
@@ -14,4 +14,5 @@ LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/engine/render)
 target_link_libraries(utils PUBLIC transform)
 target_link_libraries(utils PUBLIC player_controls)
 target_link_libraries(utils PUBLIC render_core)
+target_link_libraries(utils PUBLIC open_gl)
 set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER "engine")
