--- a/engine/transform/CMakeLists.txt
+++ b/engine/transform/CMakeLists.txt
@@ -8,6 +8,6 @@ SET(SOURCES
 	"rotation_request_component.h"
 	"scale_component.h"
 	"view_point_component.h"
-)
+ "transform_utils.h")
 add_library(${PROJECT_NAME} ${SOURCES})                      
 set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER "engine")
