--- a/engine/render/open_gl/CMakeLists.txt
+++ b/engine/render/open_gl/CMakeLists.txt
@@ -3,6 +3,7 @@ project(open_gl)
 
 SET(SHADER_SOURCES
 	"shaders/open_gl_shader.h"
+	"shaders/open_gl_shader.cpp"
 	"shaders/shader_utils.h"
 	"shaders/shader_utils.cpp"
 )
@@ -16,8 +17,10 @@ SET(MODEL_SOURCES
 SOURCE_GROUP("shaders" FILES ${SHADER_SOURCES})
 SOURCE_GROUP("model" FILES ${MODEL_SOURCES})
 LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/engine/render/utils)
+LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/engine/render/core)
 ADD_LIBRARY(open_gl ${SHADER_SOURCES} ${MODEL_SOURCES})
 target_link_libraries(open_gl PUBLIC render_utils) 
+target_link_libraries(open_gl PUBLIC render_core) 
 
 set_target_properties(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)                 
 SET_PROPERTY(TARGET ${PROJECT_NAME} PROPERTY FOLDER "engine/render")
