shadow map generation added

--- a/engine/render/core/CMakeLists.txt
+++ b/engine/render/core/CMakeLists.txt
@@ -12,7 +12,7 @@ SET(CORE_SOURCES
 	"render_system.h"
 	"shaders_manager.h"
 	"shader_component.h"
- "view_point_component.h" "textures_ctrl.cpp")
+ "view_point_component.h" "textures_ctrl.cpp" "render_system.cpp" )
 
 SET(LIGHT_SOURCES
 	"light/light_direction_component.h"
@@ -23,12 +23,21 @@ SET(MODEL_SOURCES
 	"model/material_component.h"
     "model/model_component.h"
 )
+
+SET(SHADOW_SOURCES
+	"shadows/shadow_map_generation_system.h"
+	"shadows/shadow_map_generation_system.cpp"
+	"shadows/shadow_map_component.h" 
+	"shadows/shadow_map_shader_component.h"
+	)
+
 SOURCE_GROUP("light" FILES ${LIGHT_SOURCES})
 SOURCE_GROUP("model" FILES ${MODEL_SOURCES})
+SOURCE_GROUP("shadow" FILES ${SHADOW_SOURCES})
 SOURCE_GROUP("" FILES ${CORE_SOURCES})
 LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/engine/render/open_gl)
 LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/engine/core)
-ADD_LIBRARY(render_core ${CORE_SOURCES} ${LIGHT_SOURCES} ${MODEL_SOURCES})
+ADD_LIBRARY(render_core ${CORE_SOURCES} ${LIGHT_SOURCES} ${MODEL_SOURCES} ${SHADOW_SOURCES})
 target_link_libraries(render_core PUBLIC open_gl) 
 target_link_libraries(render_core PUBLIC core) 
 SOURCE_GROUP("simple" FILES "subfolder_item.cpp" "subfolder_item.h")                      
