--- a/engine/transform/CMakeLists.txt
+++ b/engine/transform/CMakeLists.txt
@@ -10,6 +10,10 @@ SET(SOURCES
 	"view_point_component.h"
 	"transform_utils.h" 
 	"movement_system.h" 
-	"movement_system.cpp" "rotation_system.h" "rotation_system.cpp")
+	"movement_system.cpp" 
+	"rotation_system.h" 
+	"rotation_system.cpp"
+)
 add_library(${PROJECT_NAME} ${SOURCES})                      
 set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER "engine")
+
