omdir shadow maps

--- a/engine/render/core/CMakeLists.txt
+++ b/engine/render/core/CMakeLists.txt
@@ -35,7 +35,7 @@ SET(SHADOW_SOURCES
 	"shadows/shadow_map_shader_component.h"
 	"shadows/omnidir_shadow_map_component.h"
 	"shadows/omnidir_shadow_map_component.cpp"
-)
+ "shadows/omnidir_shadow_map_shader_component.h")
 
 SOURCE_GROUP("light" FILES ${LIGHT_SOURCES})
 SOURCE_GROUP("model" FILES ${MODEL_SOURCES})
